fix alignments

--- a/assets/sass/components/_app-download.scss
+++ b/assets/sass/components/_app-download.scss
@@ -21,18 +21,19 @@
                 display: inline-block;
                 height: 100%;
                 width: 26.6%;
-                margin: 0 3.4%;
+                margin: 0 0 0 10.4%;
                 fill: $yellow;
             }
 
             span {
                 text-align: center;
-                width: 63%;
+                width: 50%;
                 float: right;
-                margin: 0 1.5% 0;
+                margin: 0 10.4% 0 2%;
                 align-items: center;
                 display: flex;
                 height: 100%;
+                text-align: center;
             }
         }
 
