--- a/assets/sass/components/_footer-mobile-menu.scss
+++ b/assets/sass/components/_footer-mobile-menu.scss
@@ -60,12 +60,4 @@
             border-right: none;
         }
     }
-
-    .footer-language svg {
-        margin-right: 4.4rem;
-    }
-
-    .footer-livechat svg {
-        margin-right: 4.5rem;
-    }
 }
